# salsa20

./: Cargo.toml  README.md
benches/: benchmarks.rs
src/: lib.rs
